--- a/new.html
+++ b/new.html
@@ -204,7 +204,7 @@
         /* Form Section */
         .signup-section {
             padding: 4rem 1rem;
-            background: var(--gray-100);
+            background: var(--gradient-primary);
         }
 
         .signup-section h2 {
@@ -285,7 +285,7 @@
         /* Footer */
         .footer {
             padding: 4rem 1rem;
-            background: var(--secondary);
+            background: var(--gradient-primary);
             color: white;
         }
 
