--- a/new.html
+++ b/new.html
@@ -45,7 +45,7 @@
         /* New Color Variables */
         :root {
             /* Map our old CSS variable names to your new color scheme */
-            --primary: #3498db;           /* old var(--primary) usage -> now #3498db */
+            --primary: #6a11cb;           /* old var(--primary) usage -> now #3498db */
             --primary-dark: #2ecc71;      /* old var(--primary-dark) usage -> now #2ecc71 */
             --secondary: #2c3e50;         /* old var(--secondary) -> text color */
             --accent: #ff6b6b;            /* old var(--accent) -> #ff6b6b */
