--- a/new.html
+++ b/new.html
@@ -368,6 +368,11 @@
                 <p>Appointments sync to your calendar without back-and-forth phone tag.</p>
             </div>
             <div class="feature-card animate-in">
+                <i class="fas fa-solid fa-language"></i>
+                <h3 class="mb-4">Multi-Language Support</h3>
+                <p>No matter your clientele, we support English and Spanish. More coming soon. </p>
+            </div>
+            <div class="feature-card animate-in">
                 <i class="fas fa-dollar-sign mb-4"></i>
                 <h3 class="mb-4">Guaranteed ROI</h3>
                 <p>If Missed Call Agent doesn’t pay for itself in 30 days, you don’t pay.</p>
