--- a/new.html
+++ b/new.html
@@ -370,8 +370,15 @@
             <div class="feature-card animate-in">
                 <i class="fas fa-solid fa-language"></i>
                 <h3 class="mb-4">Multi-Language Support</h3>
-                <p>No matter your clientele, we support English and Spanish. More coming soon. </p>
+                <p>We seamlessly handle calls in both English and Spanish, helping you serve a broader customer base.</p>
             </div>
+            <div class="feature-card animate-in">
+              <i class="fas fa-dollar-sign mb-4"></i>
+              <h3 class="mb-4">Revenue Recovery &amp; Guaranteed ROI</h3>
+              <p>27% of calls go missed—convert them into booked appointments. 
+              If Missed Call Agent doesn’t pay for itself in 30 days, you don’t pay.</p>
+            </div>
+            <!--
             <div class="feature-card animate-in">
                 <i class="fas fa-dollar-sign mb-4"></i>
                 <h3 class="mb-4">Guaranteed ROI</h3>
@@ -381,7 +388,7 @@
                 <i class="fas fa-chart-line mb-4"></i>
                 <h3 class="mb-4">Revenue Recovery</h3>
                 <p>27% of calls go missed—convert them into booked appointments.</p>
-            </div>
+            </div> -->
         </div>
     </section>
 
