--- a/new.html
+++ b/new.html
@@ -359,13 +359,13 @@
         <div class="features-grid">
             <div class="feature-card animate-in">
                 <i class="fas fa-phone-alt mb-4"></i>
-                <h3 class="mb-4">Instant AI Call Answering</h3>
-                <p>Never miss a call again — your AI answers 24/7, day or night.</p>
+                <h3 class="mb-4">Instant AI Call Answering and Booking</h3>
+                <p>Never miss a call again. Our AI, trained on your specific business needs, answers 24/7 and automatically books appointments directly to your calendar.</p>
             </div>
             <div class="feature-card animate-in">
-                <i class="fas fa-calendar-check mb-4"></i>
-                <h3 class="mb-4">Automatic Booking</h3>
-                <p>Appointments sync to your calendar without back-and-forth phone tag.</p>
+              <i class="fas fa-cogs mb-4"></i>
+              <h3 class="mb-4">Easy Setup</h3>
+              <p>Get started in minutes—just connect your phone line, sync your calendar, and you’re ready to go. No coding or complicated integrations required.</p>
             </div>
             <div class="feature-card animate-in">
                 <i class="fas fa-solid fa-language"></i>
