Update add terms of service new.html

--- a/new.html
+++ b/new.html
@@ -522,7 +522,7 @@
             <div>
                 <h4 class="mb-4">Legal</h4>
                 <p><a href="privacypolicy.html" style="color:white;">Privacy Policy</a></p>
-                <p>Terms of Service</p>
+                <p><a href="termsandservice.html" style="color:white;">Terms of Service</a></p>
             </div>
         </div>
         <p style="text-align:center; margin-top:2rem;">&copy; 2025 Missed Call Agent. All rights reserved.</p>
