--- a/termsandservice.html
+++ b/termsandservice.html
@@ -110,7 +110,7 @@
       </a>
       <nav>
         <a href="index.html" class="nav-link">Home</a>
-        <a href="privacy-policy.html" class="nav-link">Privacy</a>
+        <a href="privacypolicy.html" class="nav-link">Privacy Policy</a>
       </nav>
     </div>
   </header>
