--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -110,7 +110,7 @@
       </a>
       <nav>
         <a href="index.html" class="nav-link">Home</a>
-        <a href="termsandservice.html" class="nav-link">Terms</a>
+        <a href="termsandservice.html" class="nav-link">Terms of Service</a>
       </nav>
     </div>
   </header>
