--- a/signedup.html
+++ b/signedup.html
@@ -1,28 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Metadata for the webpage -->
+    <!-- Basic Meta & Title -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Confirmed | Missed Call Agent</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to the existing styles -->
+    
+    <!-- Matching Styles from new.html -->
+    <style>
+        :root {
+            --primary: #6a11cb;
+            --primary-dark: #2ecc71;
+            --secondary: #2c3e50;
+            --accent: #ff6b6b;
+            --gray-50: #f4f6f7;
+            --gray-100: #f1f5f9;
+            --gray-200: #e2e8f0;
+            --gray-800: #1e293b;
+            --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+            --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1);
+            --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1);
+            --gradient-primary: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+            --gradient-secondary: linear-gradient(135deg, #ff6b6b 0%, #feca57 100%);
+            --glass-background: rgba(255, 255, 255, 0.8);
+            --glass-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.1);
+        }
+
+        /* Reset & Base */
+        * {
+            margin: 0; 
+            padding: 0; 
+            box-sizing: border-box;
+        }
+        body {
+            font-family: system-ui, -apple-system, sans-serif;
+            line-height: 1.5;
+            color: var(--secondary);
+            background-color: var(--gray-50);
+        }
+
+        /* Header */
+        .header {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
+            z-index: 50;
+            padding: 1rem;
+            box-shadow: var(--shadow-sm);
+        }
+        .header-container {
+            max-width: 1280px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .logo {
+            font-size: 1.5rem;
+            font-weight: 700;
+            color: var(--primary);
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+        .logo img {
+            height: 32px;
+        }
+        .header .btn {
+            margin-left: 1rem;
+            background: var(--gradient-primary);
+            color: #fff;
+            border-radius: 0.5rem;
+            padding: 0.5rem 1rem;
+            text-decoration: none;
+            font-weight: 600;
+        }
+        .header .btn:hover {
+            background: var(--gradient-secondary);
+        }
+
+        /* Confirmation Section */
+        .confirmation-section {
+            padding: 8rem 1rem 4rem; /* accounting for fixed header */
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: center;
+        }
+        .confirmation-section h1 {
+            margin-bottom: 2rem;
+        }
+        .cta-button {
+            display: inline-block;
+            background: var(--gradient-primary);
+            color: #fff;
+            border: none;
+            border-radius: 0.5rem;
+            padding: 0.75rem 1.5rem;
+            font-size: 1rem;
+            font-weight: 600;
+            cursor: pointer;
+            text-decoration: none;
+            margin-top: 2rem;
+        }
+        .cta-button:hover {
+            background: var(--gradient-secondary);
+        }
+
+        /* Footer */
+        .footer {
+            padding: 2rem 1rem;
+            background: var(--gradient-primary);
+            color: #fff;
+            text-align: center;
+            margin-top: 2rem;
+        }
+        .footer a {
+            color: #fff;
+            text-decoration: none;
+            margin-left: 1rem;
+            opacity: 0.9;
+        }
+        .footer a:hover {
+            opacity: 1;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <div class="logo-container">
-            <a href="index.html"><img src="assets/logo.svg" alt="Missed Call Agent Logo" id="logo"></a>
-            <h1>Sign Up Confirmed</h1>
+    <!-- Header -->
+    <header class="header">
+        <div class="header-container">
+            <div class="logo">
+                <a href="index.html" style="text-decoration: none; color: var(--primary); display: flex; align-items: center;">
+                    <img src="assets/logo.svg" alt="Missed Call Agent Logo">
+                    <span>Sign Up Confirmed</span>
+                </a>
+            </div>
+            <a href="index.html" class="btn">Home</a>
         </div>
-        <a href="index.html" class="cta-button">Home</a>
     </header>
 
-    <section class="confirmation" style="padding: 80px 20px; text-align: center;">
-        <h1 style="margin-bottom: 30px;">Your info is submitted. You will receive an email shortly with next steps to setup your account.</h1>
-        <a href="index.html" class="cta-button" style="display: inline-block; margin-top: 20px;">Return to Main Page</a>
+    <!-- Confirmation Content -->
+    <section class="confirmation-section">
+        <h1>Your info is submitted. You will receive an email shortly with next steps to setup your account.</h1>
+        <a href="index.html" class="cta-button">Return to Main Page</a>
     </section>
 
-    <footer>
-        <p>© 2025 Missed Call Agent. All rights reserved.</p>
+    <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; 2025 Missed Call Agent. All rights reserved.</p>
         <a href="privacypolicy.html">Privacy Policy</a>
     </footer>
 </body>
