--- a/new.html
+++ b/new.html
@@ -82,7 +82,7 @@
 
         /* Header */
         .header {
-            position: fixed;
+            position: sticky;
             top: 0;
             width: 100%;
             background: rgba(255, 255, 255, 0.9);
