--- a/new.html
+++ b/new.html
@@ -346,7 +346,8 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-container animate-in">
-            <h1>AI Answers Your Calls &amp; Books Jobs – Automatically.</h1>
+            <h1>AI Answers Your Calls &amp; Books Jobs</h1>
+            <h1>Automatically</h1>
             <p>Built for HVAC, Plumbing, and Electric Companies like yours.</p>
             <p>27% of service calls go unanswered, costing you thousands in lost jobs &amp; revenue. Let AI answer, book, and grow your business while you work.</p>
             <p style="font-size: 1.2rem; margin-top: 1rem;"><strong>Only $100/mo after a 14-Day Free Trial – Pays for Itself with Just 1 Job</strong></p>
