--- a/new.html
+++ b/new.html
@@ -348,7 +348,7 @@
         <div class="hero-container animate-in">
             <h1>AI Answers Your Calls &amp; Books Jobs</h1>
             <h1>Automatically</h1>
-            <p>Built for HVAC, Plumbing, and Electric Companies like yours.</p>
+            <p>Built for HVAC, Plumbing, and Electrician Companies Like Yours</p>
             <p>27% of service calls go unanswered, costing you thousands in lost jobs &amp; revenue. Let AI answer, book, and grow your business while you work.</p>
             <p style="font-size: 1.2rem; margin-top: 1rem;"><strong>Only $100/mo after a 14-Day Free Trial – Pays for Itself with Just 1 Job</strong></p>
             <button class="btn" onclick="document.getElementById('signup').scrollIntoView({behavior: 'smooth'})">
