--- a/signedup.html
+++ b/signedup.html
@@ -134,7 +134,7 @@
             <div class="logo">
                 <a href="index.html" style="text-decoration: none; color: var(--primary); display: flex; align-items: center;">
                     <img src="assets/logo.svg" alt="Missed Call Agent Logo">
-                    <span>Sign Up Confirmed</span>
+                    <span>Missed Call Agent</span>
                 </a>
             </div>
             <a href="index.html" class="btn">Home</a>
@@ -143,8 +143,8 @@
 
     <!-- Confirmation Content -->
     <section class="confirmation-section">
-        <h1>Your info is submitted. You will receive an email shortly with next steps to setup your account.</h1>
-        <a href="index.html" class="cta-button">Return to Main Page</a>
+        <h1>Your information is submitted. You will receive an email shortly with next steps to setup your account.</h1>
+        <a href="index.html" class="cta-button">Return to Home</a>
     </section>
 
     <!-- Footer -->
