--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
             <form
                 id="signupForm"
                 method="POST"
-                action="https://script.google.com/macros/s/AKfycbwfICumV-Q3h2IXQ4V7P1w8RN-daeNiH3r95a3nRGUUL6jNAIsoAf-ZPBt4DjluQl8LxQ/exec"
+               <!-- action="https://script.google.com/macros/s/AKfycbwfICumV-Q3h2IXQ4V7P1w8RN-daeNiH3r95a3nRGUUL6jNAIsoAf-ZPBt4DjluQl8LxQ/exec" -->
                 target="hidden_iframe"
                 onsubmit="
                     gtag('event','Form_Submission',{event_category:'Lead',event_label:'Early Access'});
